--- a/index.html
+++ b/index.html
@@ -6,134 +6,177 @@
 <title>魚料理レシピ一覧</title>
 <!-- 👇 CSSは元のまま（省略なし） -->
 <style>
-  :root{
-    --bg:#f6f7fb; /* 薄いグレー */
-    --card:#ffffff; /* 白 */
-    --accent:#2b6cb0; /* 濃い青 */
-    --muted:#666;
-    --success:#2f855a;
-    --danger:#c53030;
-    --max-width:1200px;
-    /* 視認性向上のため、ヘッダー背景色をわずかに濃く */
-    --header-bg: #e2e8f0; 
-  }
-  *{box-sizing:border-box}
-  body{
-    font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Meiryo",sans-serif;
-    margin:0;
-    background:var(--bg);
-    color:#222;
-    padding:20px;
-    display:flex;
-    justify-content:center;
-  }
-  .wrap{
-    width:100%;
-    max-width:var(--max-width);
-  }
-  header{
-    display:flex;
-    flex-direction: row; 
-    gap:12px;
-    align-items:flex-start;
-    margin-bottom:18px;
-  }
-  header h1{margin:0;font-size:1.3rem}
-  .controls{
-    margin-left:auto;
-    display:flex;
-    gap:8px;
-    flex-wrap:wrap;
-    align-items:center;
-  }
-  input[type="search"], select{
-    padding:8px 10px;
-    border-radius:8px;
-    border:1px solid #d6d8df;
-    background:white;
-  }
-  button{
-    padding:8px 12px;
-    border-radius:8px;
-    border:none;
-    background:var(--accent);
-    color:white;
-    cursor:pointer;
-  }
-  button:disabled{opacity:.6;cursor:not-allowed}
-  main{
-    background:transparent;
-  }
-  table{
-    width:100%;
-    border-collapse:collapse;
-    background:var(--card);
-    border-radius:10px;
-    overflow:hidden;
-    box-shadow:0 6px 18px rgba(20,20,40,0.06);
-  }
-  thead th{
-    text-align:left;
-    padding:10px 12px;
-    font-size:0.85rem;
-    /* 修正: ヘッダー背景色を調整 */
-    background:var(--header-bg);
-    border-bottom:1px solid #eee;
-    position:sticky;
-    top:0;
-    z-index:1;
-    /* 修正: 文字が途中で改行されないようにし、スペースを調整 */
-    white-space: nowrap;
-  }
-  tbody td{
-    padding:10px 12px;
-    border-bottom:1px dashed #eee;
-    vertical-align:top;
-    font-size:0.95rem;
-  }
-  tbody tr:hover{background:rgba(43,108,176,0.03)}
-  .muted{color:var(--muted);font-size:0.85rem}
-  .pill{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef5ff;color:var(--accent);font-size:0.8rem}
-  .actions button{margin-right:6px}
-  .tag-type{padding:4px 8px;border-radius:6px;font-size:0.8rem}
-  /* 配色維持 */
-  .type-recipe{background:#fff7ed;color:#b45309;border:1px solid #f6e7d0}
-  .type-pre{background:#f0fff4;color:#2f855a;border:1px solid #d6f7df}
-  .modal-backdrop{
-    position:fixed;inset:0;background:rgba(12,18,30,0.45);display:none;align-items:center;justify-content:center;padding:20px;z-index:1000;
-  }
-  .modal{
-    width:100%;max-width:760px;background:var(--card);border-radius:12px;padding:18px;box-shadow:0 10px 30px rgba(10,20,40,0.25);
-    max-height:90vh;overflow:auto;
-  }
-  .modal h2{margin:0 0 8px 0}
-  .modal .meta{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:8px}
-  .grid{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:12px;
-  }
-  .section-title{font-weight:700;margin:10px 0 6px 0}
-  ul{margin:6px 0 12px 20px}
-  pre{white-space:pre-wrap;background:#f8fafc;padding:10px;border-radius:8px;border:1px solid #eef2f7}
-  .small{font-size:0.85rem;color:var(--muted)}
-  footer{margin-top:14px;display:flex;justify-content:space-between;align-items:center;gap:10px}
-  @media (max-width:700px){
-    header{
-      flex-direction: column;
-      align-items: stretch;
-    }
-    header h1{margin-bottom: 8px;}
-    
-    .controls{
-      margin-left: 0;
-      justify-content: flex-start;
-      gap: 10px;
-    }
-    
-    .grid{grid-template-columns:1fr}
-  }
-  .notice{padding:12px;border-radius:8px;background:#fff3f3;color:var(--danger);border:1px solid rgba(197,48,48,0.12);margin-bottom:12px}
+:root{
+  --bg:#f6f7fb; /* 薄いグレー */
+  --card:#ffffff; /* 白 */
+  --accent:#2b6cb0; /* 濃い青 */
+  --muted:#666;
+  --success:#2f855a;
+  --danger:#c53030;
+  --max-width:1200px;
+  /* 視認性向上のため、ヘッダー背景色をわずかに濃く */
+  --header-bg:#e2e8f0;
+}
+*{box-sizing:border-box}
+body{
+  font-family:"Hiragino Kaku Gothic ProN","Yu Gothic","Meiryo",sans-serif;
+  margin:0;
+  background:var(--bg);
+  color:#222;
+  padding:20px;
+  display:flex;
+  justify-content:center;
+}
+.wrap{
+  width:100%;
+  max-width:var(--max-width);
+}
+header{
+  display:flex;
+  flex-direction:row;
+  gap:12px;
+  align-items:flex-start;
+  margin-bottom:18px;
+}
+header h1{margin:0;font-size:1.3rem}
+.controls{
+  margin-left:auto;
+  display:flex;
+  gap:8px;
+  flex-wrap:wrap;
+  align-items:center;
+}
+input[type="search"], select{
+  padding:8px 10px;
+  border-radius:8px;
+  border:1px solid #d6d8df;
+  background:white;
+}
+button{
+  padding:8px 12px;
+  border-radius:8px;
+  border:none;
+  background:var(--accent);
+  color:white;
+  cursor:pointer;
+}
+button:disabled{opacity:.6;cursor:not-allowed}
+main{
+  background:transparent;
+}
+table{
+  width:100%;
+  border-collapse:collapse;
+  background:var(--card);
+  border-radius:10px;
+  overflow:hidden;
+  box-shadow:0 6px 18px rgba(20,20,40,0.06);
+}
+thead th{
+  text-align:left;
+  padding:10px 12px;
+  font-size:0.85rem;
+  background:var(--header-bg);
+  border-bottom:1px solid #eee;
+  position:sticky;
+  top:0;
+  z-index:1;
+  white-space:nowrap;
+}
+tbody td{
+  padding:10px 12px;
+  border-bottom:1px dashed #eee;
+  vertical-align:top;
+  font-size:0.95rem;
+}
+tbody tr:hover{background:rgba(43,108,176,0.03)}
+.muted{color:var(--muted);font-size:0.85rem}
+.pill{
+  display:inline-block;
+  padding:4px 8px;
+  border-radius:999px;
+  background:#eef5ff;
+  color:var(--accent);
+  font-size:0.8rem;
+}
+.actions button{margin-right:6px}
+.tag-type{padding:4px 8px;border-radius:6px;font-size:0.8rem}
+.type-recipe{background:#fff7ed;color:#b45309;border:1px solid #f6e7d0}
+.type-pre{background:#f0fff4;color:#2f855a;border:1px solid #d6f7df}
+.modal-backdrop{
+  position:fixed;
+  inset:0;
+  background:rgba(12,18,30,0.45);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  padding:20px;
+  z-index:1000;
+}
+.modal{
+  width:100%;
+  max-width:760px;
+  background:var(--card);
+  border-radius:12px;
+  padding:18px;
+  box-shadow:0 10px 30px rgba(10,20,40,0.25);
+  max-height:90vh;
+  overflow:auto;
+}
+.modal h2{margin:0 0 8px 0}
+.modal .meta{
+  display:flex;
+  gap:12px;
+  flex-wrap:wrap;
+  margin-bottom:8px;
+}
+.grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:12px;
+}
+.section-title{
+  font-weight:700;
+  margin:10px 0 6px 0;
+}
+ul{margin:6px 0 12px 20px}
+pre{
+  white-space:pre-wrap;
+  background:#f8fafc;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #eef2f7;
+}
+.small{font-size:0.85rem;color:var(--muted)}
+footer{
+  margin-top:14px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+}
+@media (max-width:700px){
+  header{
+    flex-direction:column;
+    align-items:stretch;
+  }
+  header h1{margin-bottom:8px;}
+  .controls{
+    margin-left:0;
+    justify-content:flex-start;
+    gap:10px;
+  }
+  .grid{grid-template-columns:1fr}
+}
+.notice{
+  padding:12px;
+  border-radius:8px;
+  background:#fff3f3;
+  color:var(--danger);
+  border:1px solid rgba(197,48,48,0.12);
+  margin-bottom:12px;
+}
+
 </style>
 </head>
 <body>
