--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <tr>
               <th style="width:80px">No</th>
               <th style="width:80px">Type</th>
+              <th>picture</th>
               <th>Title / flavortxt</th>
               <th style="width:160px">魚 / 旬</th>
               <th style="width:120px">難易度 / 時間</th>
